# rspanel

./: Cargo.toml  Dockerfile  build.sh  readme.md
.github/workflows/: fmt.yml  main.yml  test.yml
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: AppModal.vue  AppToast.vue  ContextMenu.vue  LoginModal.vue  SettingsPanel.vue
frontend/src/composables/: useApi.js  useI18n.js  useLunar.js  useTheme.js
frontend/src/styles/: global.css
src/: main.rs
src/config/: mod.rs
src/handler/: apps.rs  auth.rs  mod.rs  monitor.rs  panel.rs  settings.rs  upload.rs
