[package]
name = "rspanel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rspanel"
path = "src/main.rs"

[dependencies]
axum = { version = "=0.6.20", features = ["multipart"] }
axum-extra = { version = "=0.7.7", features = ["cookie"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "=0.4.4", features = ["cors", "fs", "trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonwebtoken = "=9.2.0"
bcrypt = "0.15"
time = "=0.3.36"
reqwest = { version = "=0.11.27", features = ["json", "rustls-tls"], default-features = false }
url = "=2.4.1"
rand = "0.8"
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
rust-embed = "=8.3.0"
indexmap = "=2.2.6"

[profile.release]
strip = "symbols"
debug = false
opt-level = 3
lto = true
codegen-units = 1
